--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>MathStudy</title>
 </head>
 <body>
-    <header>
+    <header class="cabeçalho">
         <h1> Site de Matemática </h1>
             <h2> Especializado em conteúdos de Matemática </h2>
     </header>
