--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabeçalho">
-        <h1> Site de Matemática </h1>
+        <h1 class="cabeçalho-título"> Site de Matemática </h1>
             <h2> Especializado em conteúdos de Matemática </h2>
     </header>
 </body>
