--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MathStudy</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="cabeçalho">
+    <header class="cabeçalho"> 
+        <img src="/WhatsApp Image 2022-12-02 at 16.03.48 (4).jpeg">
         <h1 class="cabeçalho-título"> Site de Matemática </h1>
             <h2> Especializado em conteúdos de Matemática </h2>
     </header>
