--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="cabeçalho"> 
-        <img src="/WhatsApp Image 2022-12-02 at 16.03.48 (4).jpeg">
+        <img class="cabeçalho-imagem" src="teste git.jpg">
         <h1 class="cabeçalho-título"> Site de Matemática </h1>
             <h2> Especializado em conteúdos de Matemática </h2>
     </header>
