--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <img class="cabeçalho-imagem" src="teste git.jpg">
         <h1 class="cabeçalho-título"> Site de Matemática </h1>
             <h2> Especializado em conteúdos de Matemática </h2>
+        <ul> class="cabeçalho-lista">
+            <li>Página Principal</li>
+            <li>Quem Somos?</li>
+        </ul>
     </header>
 </body>
 </html>
